Fixed styling issue where buttons wouldn't style on iOS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,7 +42,7 @@ p {
     -webkit-appearance: none; 
     position: relative;
 	display: inline-block;
-	font-size: 22px;
+	font-size: 18px;
 	padding: 20px 60px 20px 60px;
 	color: white;
 	margin: 20px 10px 20px 10px;
